fix layout vertical overflow in login page

--- a/src/styles/Image.module.css
+++ b/src/styles/Image.module.css
@@ -1,5 +1,5 @@
 .illustration {
-  padding: 5rem 2rem;
+  padding: 5rem 2rem 0;
 }
 
 .illustration img {
