--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -1,9 +1,9 @@
 .main {
-    width: 100%;
-    padding: 4rem 0;
-  }
-  
-  .container {
-    width: 90%;
-    margin: 2rem auto;
-  }
+  width: 100%;
+  padding: 4rem 0;
+}
+
+.container {
+  width: 90%;
+  margin: 3rem auto 0;
+}
